[metadata]
name = axion
version = attr: axion.__version__
author = Ray Hagimoto
author_email = ray.m.hagimoto@rice.edu
description = For studying cosmic birefringence from axion strings using the "loop crossing model".
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True